# library-system

./: .gitignore  CMakeLists.txt  README.md
data/: books.csv  borrow_records.csv  temp_users.csv  users.csv
include/: Admin.h  Administrator.h  Book.h  Borrow.h  BorrowRecord.h  Catalog.h  Client.h  LibraryCatalog.h  RegularUser.h  User.h
include/screens/: AddBookScreen.h  AdminScreen.h  BorrowEditScreen.h  BorrowRenewScreen.h  BorrowReturnScreen.h  BorrowScreen.h  CatalogScreen.h  DisplayScreen.h  EditBookScreen.h  LoginScreen.h  MainMenuScreen.h  RecommendationScreen.h  RegisterScreen.h  RemoveBookScreen.h  UserScreen.h
src/: Admin.cpp  Administrator.cpp  Book.cpp  Borrow.cpp  BorrowRecord.cpp  Catalog.cpp  Client.cpp  LibraryCatalog.cpp  RegularUser.cpp  User.cpp  main.cpp
src/screens/: AddBookScreen.cpp  AdminScreen.cpp  BorrowEditScreen.cpp  BorrowRenewScreen.cpp  BorrowReturnScreen.cpp  BorrowScreen.cpp  CatalogScreen.cpp  EditBookScreen.cpp  LoginScreen.cpp  MainMenuScreen.cpp  RecommendationScreen.cpp  RegisterScreen.cpp  RemoveBookScreen.cpp  UserScreen.cpp
tests/: test_admin.cpp  test_book.cpp  test_borrow.cpp  test_catalog.cpp  test_client.cpp  test_user.cpp
